# flutter_quic

./: .gitignore  .metadata  AUTHORS  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  flutter_rust_bridge.yaml  pubspec.yaml
.doc/: testing_guide.md
.doc/core/: api_checklist.md  error_handling_strategy.md  implementation_standards.md  phase_plan.md  project_brief.md  technical_architecture.md
.doc/dev/: phase1_prompts.md  phase2_prompts.md  phase3_prompts.md  project_setup.md
.doc/reference/: frb_patterns.md  quinn_essentials.md  type_mappings.md
.doc/research/: initial_research.md
.github/workflows/: release.yml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
example/: README.md  generate_certs.sh  pubspec.yaml
example/android/app/: build.gradle.kts
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/linux/: CMakeLists.txt
example/linux/flutter/: generated_plugins.cmake
example/windows/: CMakeLists.txt
ios/: flutter_quic.podspec
lib/: flutter_quic.dart
lib/src/rust/: errors.dart  (+4 more)
linux/: CMakeLists.txt
macos/: flutter_quic.podspec
rust/: Cargo.toml
rust/src/: frb_generated.rs  lib.rs
rust/src/api/: bridge.rs  mod.rs
rust/src/convenience/: client.rs  mod.rs  pool.rs  server.rs
rust/src/core/: config.rs  connection.rs  endpoint.rs  mod.rs  stream.rs
rust/src/errors/: mod.rs
rust/src/models/: certificate.rs  config_types.rs  mod.rs  types.rs
scripts/: release.sh
test/unit/: convenience_api_test.dart
windows/: CMakeLists.txt
(+16 files in other folders)
