[package]
name = "flutter_quic"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.11.1"
quinn = "0.11.8"
quinn-proto = "0.11.12"
tokio = { version = "1.0", features = ["full"] }
rustls = { version = "0.23.5", default-features = false, features = ["ring"] }
rustls-pki-types = "1.0"
thiserror = "2.0"
bytes = "1.8"
futures = "0.3"
tracing = "0.1"
chrono = "0.4"
url = "2.4"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
